--- a/src/app/pages/admin/empresas/usuarios/usuarios.component.scss
+++ b/src/app/pages/admin/empresas/usuarios/usuarios.component.scss
@@ -1,4 +1,5 @@
 /* Header de Usuario mejorado */
+/* Header de Usuario mejorado */
 .header-usuario {
   background-color: #263238; /* color oscuro */
   color: #ffffff;
